accessible toggles focus states for interactive elements color contrast fixes kebab case helper sr-only labels for buttons all removal form fields have labels

--- a/public/scss/partials/data-removal/remove-data.scss
+++ b/public/scss/partials/data-removal/remove-data.scss
@@ -358,18 +358,12 @@
   }
 
   &-key-list-item {
-    border: 1px solid var(--inkDark);
-    padding: 7px 10px;
+    
     height: 32px;
-    border-radius: 16px;
     margin-left: 12px;
 
     &:first-child {
       margin-left: 0;
-    }
-
-    &:focus {
-      border: 1px dotted var(--grey5);
     }
 
     .remove-filter-key-list-title {
@@ -380,13 +374,18 @@
       margin-left: 0;
       margin-top: 10px;
       height: 48px;
-      border-radius: 24px;
     }
   }
 
   &-key-button {
+    height: 100%;
+    padding: 7px 10px;
+    border: 1px solid var(--inkDark);
+    border-radius: 16px;
+
     @include breakpoint(mobile) {
       width: 100%;
+      border-radius: 24px;
     }
   }
 
@@ -420,7 +419,9 @@
       }
 
       .remove-filter-key-list-item[data-id*="#{$k-status-progress}"] {
-        background-color: var(--inkDark);
+        .remove-filter-key-button {
+          background-color: var(--inkDark);
+        }
 
         .remove-filter-key-list-title {
           color: white;
@@ -436,7 +437,10 @@
         display: block;
       }
       .remove-filter-key-list-item[data-id*="#{$k-status-complete}"] {
-        background-color: var(--inkDark);
+        
+        .remove-filter-key-button {
+          background-color: var(--inkDark);
+        }
 
         .remove-filter-key-list-title {
           color: white;
@@ -452,7 +456,9 @@
         display: block;
       }
       .remove-filter-key-list-item[data-id*="#{$k-status-blocked}"] {
-        background-color: var(--inkDark);
+        .remove-filter-key-button {
+          background-color: var(--inkDark);
+        }
 
         .remove-filter-key-list-title {
           color: white;
@@ -569,6 +575,13 @@
 
   &-delete-container {
     margin-top: 20px;
+  }
+
+  &-delete-link {
+    &:hover, &:focus {
+      background-color: var(--alertRed);
+      color: white;
+    }
   }
 
   &-form {
@@ -762,6 +775,12 @@
 
 .remove-question-trigger {
   margin-left: 5px;
+  border: 0;
+  &:focus, &:hover {
+    .remove-question-img {
+      filter: brightness(.9);
+    }
+  }
 }
 
 .tmp-select-output {
@@ -835,7 +854,7 @@
 
 .remove-form-deleted {
   &-section {
-    background-color: var(--purple);
+    background-color: var(--violet4);
     color: white;
   }
 
